# tactile-ride

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  west.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_proposal.md  feature_request.md  hardware_test_report.md
.github/workflows/: docs.yml  firmware.yml
LICENSES/: README.md
docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  GOALS.md  IMPLEMENTATION_PLAN.md  MANUAL_BLE_HID_VERIFICATION.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  SAFETY.md  TEST_PLAN.md
docs/adr/: 0001-repository-structure.md  0002-ble-hid-consumer-control.md  0003-no-mandatory-mobile-app.md  0004-firmware-framework-evaluation.md  0005-development-board-selection-criteria.md  0006-battery-powered-prototype.md  0007-licensing-strategy.md
docs/blueprints/v0.1/: README.md  TactileRide_V0.1_Control_Coordinates.csv
docs/plans/: 2026-07-17-add-v01-blueprint-assets.md  2026-07-17-ble-hid-consumer-control-poc.md  2026-07-17-bootstrap-tactile-ride.md
firmware/app/: CMakeLists.txt  Kconfig  README.md  prj.conf
firmware/app/include/tactile_ride/: ble_connection.h  button_input.h  button_logic.h  consumer_report.h  hid_service.h  media_action.h  media_controller.h  power_policy.h
firmware/app/src/: ble_connection.c  button_input.c  button_logic.c  consumer_report.c  hid_service.c  main.c  media_controller.c  power_policy.c
firmware/boards/: README.md
firmware/tests/logic/: CMakeLists.txt  testcase.yaml
firmware/tests/logic/src/: main.c
tools/: validate-repository-structure.sh
(+4 files in other folders)
